--- a/符号计算/README.ipynb
+++ b/符号计算/README.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## 使用SymPy进行符号计算\n",
     "\n",
-    "[SymPy]()是python环境下的符号计算库,他可以用于:\n",
+    "[SymPy](https://www.sympy.org/zh/index.html)是python环境下的符号计算库,他可以用于:\n",
     "\n",
     "+ 简化数学表达式\n",
     "+ 计算微分,积分与极限\n",
@@ -350,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
