--- a/符号计算/输出/求值.ipynb
+++ b/符号计算/输出/求值.ipynb
@@ -4,11 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 带入符号求值\n",
+    "# 求值\n",
     "\n",
     "符号运算一种输出自然是带入符号求值了,我们推导了半天,很多时候是为了最终计算出数值解的.\n",
     "\n",
-    "我们可以使用算式对象的`subs`方法为自变量符号代入具体数值以求解"
+    "求值有3种方式:\n",
+    "\n",
+    "+ 求符号的值\n",
+    "+ 带入符号求算式的值\n",
+    "+ 将算式转化为python函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 符号求值\n",
+    "\n",
+    "符号求值使用`evalf`方法"
    ]
   },
   {
@@ -17,7 +30,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp\n",
+    "import sympy as sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.14159265358979"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.pi.evalf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "也可以带上精度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1416"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.pi.evalf(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.909"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.sin(2).evalf(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 带入符号求值\n",
+    "\n",
+    "符号运算一种输出自然是带入符号求值了,我们推导了半天,很多时候是为了最终计算出数值解的.\n",
+    "\n",
+    "我们可以使用算式对象的`subs`方法为自变量符号代入具体数值以求解"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x,y,z = sp.symbols(\"x,y,z\")"
    ]
   },
@@ -128,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
