--- a/符号计算/输出/求值.ipynb
+++ b/符号计算/输出/求值.ipynb
@@ -156,7 +156,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "另一种方式是使用函数`lambdify(params:Tuple[symbols],exp,package:str)=>Callable`把算式转换成python函数,末位参数表示一些用到的运算使用哪个包,支持的有:\n",
+    "## 将算式转换为python函数\n",
+    "\n",
+    "另一种用处是使用函数`lambdify(params:Tuple[symbols],exp,package:str)=>Callable`把算式转换成python函数,末位参数表示一些用到的运算使用哪个包,支持的有:\n",
     "\n",
     "+ `sympy`,自带的运算库\n",
     "+ `math`标准库math\n",
@@ -201,13 +203,6 @@
    ],
    "source": [
     "f_python(x=1,y=2,z=3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "我们也可以"
    ]
   }
  ],
