--- a/使用标准库处理基本的数值计算问题/使用标准库处理基本数学问题.ipynb
+++ b/使用标准库处理基本的数值计算问题/使用标准库处理基本数学问题.ipynb
@@ -567,38 +567,49 @@
     "\n",
     "常数|说明\n",
     "---|---\n",
-    "math.e |  自然常数e\n",
-    "math.pi | 圆周率pi\n",
+    "`math.e`|  自然常数e\n",
+    "`math.pi`| 圆周率pi\n",
+    "`math.tau`[Python3.6]|数学常数$τ = 6.283185...$,精确到可用精度.Tau 是一个圆周常数,等于 2π,圆的周长与半径之比\n",
+    "`math.inf`[Python3.5]|浮点正无穷大,相当于`float('inf')`\n",
+    "`math.nan`[Python3.5]|浮点\"非数字\"(NaN)值,相当于`float('nan')`\n",
     "\n",
     "### 数值计算\n",
     "\n",
     "函数|说明|例子\n",
     "---|---|---\n",
-    "math.ceil(x)|返回大于x的整数上限的浮点数,x为整数则返回自己的浮点形式|math.ceil(1)->1.0,</br>math.ceil(1.1)->2.0,</br>math.ceil(-1.5)->-1.0\n",
-    "math.copysign(x, y)|返回绝对值为x,符号为y的符号的数|math.copysign(1.0, -0.0)->-1.0\n",
-    "math.fabs(x)|相当于abs(x),返回绝对值|math.fabs(-3.4)->3.4\n",
-    "math.factorial(x)|数学上的x!,阶乘|math.factorial(3)->6\n",
-    "math.floor(x)|与ceil相反,得到上限|math.floor(-0.5)->-1.0\n",
-    "math.fmod(x, y)|求模运算,适合用在浮点数,注意和`%`的不同|math.fmod(3.5, -2)->1.5</br>3.5%-2->-0.5\n",
-    "math.frexp(x)|将x拆成分(m,e),x== m * 2**e|math.frexp(2.43)->(0.6075, 2)\n",
-    "math.fsum(iterable)|求序列中所有数的和的精确值|fsum([.1, .1, .1, .1, .1, .1, .1, .1, .1, .1])->1.0\n",
-    "math.isinf(x)|判断x是不是`float(\"inf\")`|---\n",
-    "math.isnan(x)|判断x是不是`float(\"NaN\")`|---\n",
-    "math.ldexp(m,e)|求m * 2**e|math.ldexp(3, 1)->6.0\n",
-    "math.modf(x)|拆分整数小数部分|math.modf(-3.5)->(-0.5, -3.0)\n",
-    "math.trunc(x)|返回整数部分|math.trunc(3.5)->3\n",
+    "`math.ceil(x)`|返回大于x的整数上限的浮点数,x为整数则返回自己的浮点形式|`math.ceil(1)->1.0,</br>math.ceil(1.1)->2.0,</br>math.ceil(-1.5)->-1.0`\n",
+    "`math.copysign(x, y)|返回绝对值为x,符号为y的符号的数|`math.copysign(1.0, -0.0)->-1.0`\n",
+    "`math.fabs(x)`|相当于`abs(x)`,返回绝对值|`math.fabs(-3.4)->3.4`\n",
+    "`math.factorial(x)`|数学上的x!,阶乘|`math.factorial(3)->6`\n",
+    "`math.floor(x)`|与ceil相反,得到上限|`math.floor(-0.5)->-1.0`\n",
+    "`math.fmod(x, y)`|求模运算,适合用在浮点数,注意和`%`的不同|`math.fmod(3.5, -2)->1.5</br>3.5%-2->-0.5`\n",
+    "`math.frexp(x)`|将x拆成分`(m,e)`,$ x = m \\cdot 2^e $|`math.frexp(2.43)->(0.6075, 2)`\n",
+    "`math.fsum(iterable)`|求序列中所有数的和的精确值|`fsum([.1, .1, .1, .1, .1, .1, .1, .1, .1, .1])->1.0`\n",
+    "`math.isinf(x)`|判断x是不是`float(\"inf\")`|---\n",
+    "`math.isfinite(x)`|如果 x 既不是无穷大也不是`NaN`,则返回`True`,否则返回`False`\n",
+    "`math.isclose(a, b, rel_tol=1e-09, abs_tol=0.0)`[Python3.5]|用于测试近似相等的函数,`rel_tol`为相对容差,`abs_tol`为最小绝对容差|---\n",
+    "`math.isnan(x)`|判断x是不是`float(\"NaN\")`|---\n",
+    "`math.ldexp(m,e)`|求$m \\cdot 2^e$|`math.ldexp(3, 1)->6.0`\n",
+    "`math.modf(x)`|拆分整数小数部分|`math.modf(-3.5)->(-0.5, -3.0)`\n",
+    "`math.trunc(x)`|返回整数部分|`math.trunc(3.5)->3`\n",
+    "`math.gcd(a, b)`[Python3.5]|返回两个数的最大公约数|`math.gcd(12,15)->3`\n",
+    "`math.remainder(x, y)`[Python3.7]|返回`IEEE 754`风格的`x`相对于`y`的余数|---\n",
+    "\n",
     "\n",
     "### 平方和对数\n",
     "\n",
+    "\n",
     "函数|说明|例子\n",
     "---|---|---\n",
-    "math.exp(x)|自然数的幂 e**x|math.exp(2)->7.38905609893065\n",
-    "math.expm1(x)|返回e的x次方减1| math.expm1(2)->6.38905609893065\n",
-    "math.log(x[, base])| 返回x的以base为底的对数，base默认为e|math.log(math.e)->1.0</br>math.log(10,2)->3.3219280948873626\n",
-    "math.log10(x)|返回x的以10为底的对数| math.log10(2)->0.30102999566398114\n",
-    "math.log1p(x)|返回1+x的自然对数（以e为底)| math.log1p(math.e-1)->1.0\n",
-    "math.pow(x, y)|返回x的y次方|math.pow(5,3)->125.0\n",
-    "math.sqrt(x)|返回x的平方根|math.sqrt(3)->1.7320508075688772\n",
+    "`math.exp(x)`|自然数的幂$e^x$|`math.exp(2)->7.38905609893065`\n",
+    "`math.expm1(x)`|返回e的x次方减1|`math.expm1(2)->6.38905609893065`\n",
+    "`math.log(x[, base])`| 返回x的以base为底的对数,base默认为`e`|`math.log(math.e)->1.0</br>math.log(10,2)->3.3219280948873626`\n",
+    "`math.log10(x)`|返回x的以10为底的对数|`math.log10(2)->0.30102999566398114`\n",
+    "`math.log1p(x)`|返回1+x的自然对数（以e为底)|`math.log1p(math.e-1)->1.0`\n",
+    "`math.pow(x, y)`|返回x的y次方|`math.pow(5,3)->125.0`\n",
+    "`math.sqrt(x)`|返回x的平方根|`math.sqrt(3)->1.7320508075688772`\n",
+    "\n",
+    "\n",
     "\n",
     "### 三角函数\n",
     "\n",
@@ -606,30 +617,30 @@
     "\n",
     "函数|说明\n",
     "---|---\n",
-    "math.acos(x)|acos(x)\n",
-    "math.asin(x)|asin(x)\n",
-    "math.atan(x)|atan(x)\n",
-    "math.atan2(y, x)|atan(y / x)\n",
-    "math.cos(x)|cos(x)\n",
-    "math.hypot(x, y)|sqrt(x*x + y*y)\n",
-    "math.sin(x)|sin(x)\n",
-    "math.tan(x)|tan(x)\n",
+    "`math.acos(x)`|`acos(x)`\n",
+    "`math.asin(x)`|`asin(x)`\n",
+    "`math.atan(x)`|`atan(x)`\n",
+    "`math.atan2(y, x)`|`atan(y / x)`\n",
+    "`math.cos(x)`|`cos(x)`\n",
+    "`math.hypot(x, y)`|`sqrt(x*x + y*y)`\n",
+    "`math.sin(x)`|`sin(x)`\n",
+    "`math.tan(x)`|`tan(x)`\n",
     "\n",
     "+ 角度,弧度转换\n",
     "\n",
     "函数|说明\n",
     "---|---\n",
-    "math.degrees(x)|弧度转度\n",
-    "math.radians(x)|度转弧度\n",
+    "`math.degrees(x)`|弧度转度\n",
+    "`math.radians(x)`|度转弧度\n",
     "\n",
     "\n",
     "### 双曲函数\n",
     "\n",
     "函数|说明\n",
     "---|---\n",
-    "`math.sinh(x)`|双曲正弦 $$ \\sinh x = {\\frac {e^x  - e^{ - x} } 2} $$\n",
-    "`math.cosh(x)`|双曲余弦 $$ \\cosh x = {\\frac {e^x  + e^{ - x} }  2} $$\n",
-    "`math.tanh(x)`|双曲正切 $$ \\tanh x = {\\frac {\\sinh x} {\\cosh x}} $$\n",
+    "`math.sinh(x)`|双曲正弦 $ \\sinh x = {\\frac {e^x  - e^{ - x} } 2} $\n",
+    "`math.cosh(x)`|双曲余弦 $ \\cosh x = {\\frac {e^x  + e^{ - x} }  2} $\n",
+    "`math.tanh(x)`|双曲正切 $ \\tanh x = {\\frac {\\sinh x} {\\cosh x}} $\n",
     "`math.acosh(x)`|反双曲余弦\n",
     "`math.asinh(x)`|反双曲正弦\n",
     "`math.atanh(x)`|反双曲正切\n",
@@ -639,10 +650,31 @@
     "\n",
     "函数|说明\n",
     "---|---\n",
-    "math.erf(x)|误差函数: $$\\operatorname{erf}(x) = \\frac{2}{\\sqrt{\\pi}}\\int_0^x e^{-t^2}\\,\\mathrm dt.$$\n",
-    "math.erfc(x)|互补误差函数:$$\\operatorname{erfc}(x) = 1-\\operatorname{erf}(x) = \\frac{2}{\\sqrt{\\pi}} \\int_x^{\\infty} e^{-t^2}\\,\\mathrm dt\\,.$$\n",
-    "math.gamma(x)|伽玛函数 $$\\Gamma(z) = \\int_{0}^{\\infty} \\frac{t^{z-1}}{\\mathrm{e}^t} \\,{\\rm{d}}t$$\n",
-    "math.lgamma(x)|伽马函数绝对值的自然对数\n"
+    "`math.erf(x)`|误差函数: $\\operatorname{erf}(x) = \\frac{2}{\\sqrt{\\pi}}\\int_0^x e^{-t^2}\\,\\mathrm dt.$\n",
+    "`math.erfc(x)`|互补误差函数:$\\operatorname{erfc}(x) = 1-\\operatorname{erf}(x) = \\frac{2}{\\sqrt{\\pi}} \\int_x^{\\infty} e^{-t^2}\\,\\mathrm dt\\,.$\n",
+    "`math.gamma(x)`|伽玛函数 $\\Gamma(z) = \\int_{0}^{\\infty} \\frac{t^{z-1}}{\\mathrm{e}^t} \\,{\\rm{d}}t$\n",
+    "`math.lgamma(x)`|伽马函数绝对值的自然对数\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.gcd(12,15)"
    ]
   },
   {
@@ -789,6 +821,7 @@
     "函数|说明\n",
     "---|---\n",
     "mean()|\t均值\n",
+    "harmonic_mean()|计算调和平均,比如求a,b,c三个数的调和平均就是计算$ \\frac3 {(\\frac 1 a + \\frac 1 b + \\frac 1 c)}$\n",
     "median()|中位数\n",
     "median_low()|\tLow median of data.\n",
     "median_high()|\tHigh median of data.\n",
@@ -1818,7 +1851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
