--- a/使用numpy_scipy处理复杂的数值计算问题/numpy的高性能同构定长多维数组.ipynb
+++ b/使用numpy_scipy处理复杂的数值计算问题/numpy的高性能同构定长多维数组.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "## ndarray数组的基本操作\n",
     "\n",
-    "ndarray本质上是一段连续内存.它支持基本的构造,切片,访问,和修改操作,并且也支持合并操作."
+    "[ndarray](https://www.numpy.org.cn/reference/array_objects/index.html)本质上是一段连续内存.它支持基本的构造,切片,访问,和修改操作,并且也支持合并操作."
    ]
   },
   {
