--- a/使用dask处理大规模数据的数值计算问题/README.ipynb
+++ b/使用dask处理大规模数据的数值计算问题/README.ipynb
@@ -149,6 +149,17 @@
     "\n",
     "其他部署方式只是连接集群的方式不一样了而已"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## dask的应用场景\n",
+    "\n",
+    "dask是为大数据设计的,因此如果数据规模小实际上并不适合使用它.如果你的数据无法放到单机内存中那就可以使用它,反之,好好使用numpy吧.\n",
+    "\n",
+    "dask不会让你的计算更快,它只是解决数据过大单机无法计算的问题,如果是为了让运算更快,建议使用numba或者cython加速,这个就是另一个话题了."
+   ]
   }
  ],
  "metadata": {
