--- a/使用dask处理大规模数据的数值计算问题/分布式数据结构.ipynb
+++ b/使用dask处理大规模数据的数值计算问题/分布式数据结构.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 分布式的数据结构\n",
+    "# 分布式数据结构\n",
     "\n",
     "dask提供的分布式数据结构有3种\n",
     "\n",
@@ -12,7 +12,9 @@
     "+ [bag](https://docs.dask.org/en/latest/bag-api.html)类似python的list\n",
     "+ [DataFrame](https://docs.dask.org/en/latest/dataframe-api.html)类似pandas的DataFrame\n",
     "\n",
-    "这三种数据结构基本已经可以满足多有需求.更可贵的是他们的接口和对照版基本一致"
+    "这三种数据结构基本已经可以满足多有需求.更可贵的是他们的接口和对照版基本一致\n",
+    "\n",
+    "这边只介绍前两种,DataFrame会在后面数据科学部分介绍好pandas后再介绍"
    ]
   },
   {
