--- a/使用dask处理大规模数据的数值计算问题/README.ipynb
+++ b/使用dask处理大规模数据的数值计算问题/README.ipynb
@@ -144,10 +144,13 @@
     "dask集群任务的工作流基本都是一样:\n",
     "\n",
     "1. 连接集群,实例化一个客户端对象\n",
-    "2. 构建计算图\n",
-    "3. 提交任务\n",
+    "2. 利用封装好的分布式数据结构或者底层api构建计算图\n",
+    "3. 提交任务,调度执行\n",
     "\n",
-    "其他部署方式只是连接集群的方式不一样了而已"
+    "其他部署方式只是连接集群的方式不一样了而已\n",
+    "\n",
+    "\n",
+    "![dask工作流](source/collections-schedulers.png)"
    ]
   },
   {
