--- a/使用dask处理大规模数据的数值计算问题/README.ipynb
+++ b/使用dask处理大规模数据的数值计算问题/README.ipynb
@@ -78,7 +78,9 @@
     "\n",
     "```\n",
     "\n",
-    "这个配置方式用来测试绰绰有余,但并不适合生产环境使用,生产环境建议使用`Kubernetes`方式或者`YARN/Hadoop`方式.如果非要用docker方式,那也注意一定不要用warm自带的overlay网络,可以使用host方式pubish端口,所有的网络流量通过宿主机ip走内网流量."
+    "这个配置方式用来测试绰绰有余,但并不适合生产环境使用,生产环境建议使用`Kubernetes`方式或者`YARN/Hadoop`方式.如果非要用docker方式,那也注意一定不要用warm自带的overlay网络,可以使用host方式pubish端口,所有的网络流量通过宿主机ip走内网流量.\n",
+    "\n",
+    "无论是swarm方式还是k8s方式部署dask集群,我们都需要用到dask的环境镜像[daskdev/dask](https://github.com/dask/dask-docker/tree/master/base).我们应该保持集群中每个节点使用的镜像一致,以防止不必要的麻烦"
    ]
   },
   {
@@ -87,7 +89,11 @@
    "source": [
     "## 命令行方式的helloworld\n",
     "\n",
-    "命令行方式的核心是启动调度器,调度器有一个默认的管理界面在`8787`端口.而要使用集群计算我们需要连接到调度器的`8786`端口.这里我把远程机器上的调度器端口映射到了本地."
+    "命令行方式的核心是启动调度器,调度器有一个默认的管理界面在`8787`端口.这个界面上我们可以看到连接着的集群的各个节点信息,以及任务节点的分布情况.\n",
+    "\n",
+    "\n",
+    "\n",
+    "而要使用集群计算我们需要连接到调度器的`8786`端口.这里我把远程机器上的调度器端口映射到了本地."
    ]
   },
   {
