--- a/使用dask处理大规模数据的数值计算问题/实时任务提交.ipynb
+++ b/使用dask处理大规模数据的数值计算问题/实时任务提交.ipynb
@@ -60,67 +60,7 @@
    "source": [
     "## 异步提交\n",
     "\n",
-    "dask的异步接口基于Tornado或者asyncio,默认使用的是Tornado,我们可以指定loop来指定使用什么事件循环.\n",
-    "\n",
-    "异步提交方式有两种:\n",
-    "\n",
-    "\n",
-    "### 在`client.gather`操作上加上参数`asynchronous=True`,这样将`Futures`对象转化成一个`awaitable`的对象"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import asyncio\n",
-    "from dask.distributed import Client\n",
-    "loop = asyncio.get_event_loop()\n",
-    "\n",
-    "def square(x):\n",
-    "    return x ** 2\n",
-    "\n",
-    "async def test1():\n",
-    "    client = Client('localhost:8786')\n",
-    "    A = client.map(square, range(10000))\n",
-    "    f = client.submit(sum, A)\n",
-    "    result = await client.gather(f,asynchronous=True)\n",
-    "    print(result)\n",
-    "    return result\n",
-    "\n",
-    "async def main():\n",
-    "    await test1()\n",
-    "\n",
-    "t = loop.create_task(main())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "InvalidStateError",
-     "evalue": "Result is not set.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInvalidStateError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-b28f3e5b9f5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mInvalidStateError\u001b[0m: Result is not set."
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "333283335000\n"
-     ]
-    }
-   ],
-   "source": [
-    "t.result()"
+    "dask的异步接口基于Tornado或者asyncio,默认使用的是Tornado,我们可以指定loop来指定使用什么事件循环."
    ]
   },
   {
@@ -136,6 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import asyncio\n",
+    "loop = asyncio.get_eventloop()\n",
     "async def test():\n",
     "    client1 = await Client('localhost:8786',loop=loop,asynchronous=True)\n",
     "    A = await client.map(square, range(10000))\n",
@@ -149,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loop.run_until_complete(test())"
+    "loop.(test())"
    ]
   },
   {
