--- a/使用dask处理大规模数据的数值计算问题/实时任务提交.ipynb
+++ b/使用dask处理大规模数据的数值计算问题/实时任务提交.ipynb
@@ -72,26 +72,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting code/realtime/async_submit.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile code/realtime/async_submit.py\n",
     "import asyncio\n",
-    "loop = asyncio.get_eventloop()\n",
-    "async def test():\n",
-    "    client1 = await Client('localhost:8786',loop=loop,asynchronous=True)\n",
-    "    A = await client.map(square, range(10000))\n",
-    "    total = await client.submit(sum, A)\n",
-    "    print(total)"
+    "import platform\n",
+    "import multiprocessing\n",
+    "from dask.distributed import Client\n",
+    "\n",
+    "\n",
+    "def square(x):\n",
+    "    return x ** 2\n",
+    "\n",
+    "\n",
+    "async def f():\n",
+    "    client = await Client(\"localhost:8786\", asynchronous=True)\n",
+    "    A = client.map(square, range(10000))\n",
+    "    result = await client.submit(sum, A)\n",
+    "    print(result)\n",
+    "    await client.close()\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    if \"Windows\" in platform.platform():\n",
+    "        multiprocessing.freeze_support()\n",
+    "    asyncio.get_event_loop().run_until_complete(f())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "loop.(test())"
+    "上面的方式我们使用的是基于进程池的`Client`对象,可以使用参数`processes=False`设定改为使用线程池的`Client`对象,这样就不需要在windows上使用`multiprocessing.freeze_support()`了"
    ]
   },
   {
@@ -103,6 +126,13 @@
     "这可能是dask下一个大版本的主要新特性,这个模式下我们的任务不走调度器,而是直接交给worker通过actor对象执行,这样的好处是减少了调度时间可以响应更快,但坏处是无法通过调度器自动优化,debug,而且一旦在worker上创建了actor,那除非worker关闭否则完全无法关闭.\n",
     "\n",
     "Actor使用类定义,它可以快速的改变状态,我们可以像使用类实例一样的使用它,它同样也支持同步和异步两种方式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 同步提交"
    ]
   },
   {
@@ -190,16 +220,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 异步提交\n",
+    "\n",
     "这个模式下异步接口更加方便,上面的内容可以写成如下异步实现"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting code/realtime/async_actor.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile code/realtime/async_actor.py\n",
+    "import asyncio\n",
+    "import platform\n",
+    "import multiprocessing\n",
     "from dask.distributed import Client\n",
+    "\n",
+    "\n",
     "class Counter:\n",
     "    n = 0\n",
     "\n",
@@ -209,32 +255,29 @@
     "    def increment(self):\n",
     "        self.n += 1\n",
     "        return self.n\n",
-    "    \n",
-    "async def test2():\n",
-    "    client = await Client('localhost:8786',loop=loop,asynchronous=True)\n",
+    "\n",
+    "\n",
+    "async def f():\n",
+    "    client = await Client(\"localhost:8786\", asynchronous=True)\n",
     "    counter = await client.submit(Counter, actor=True)\n",
     "    await counter.increment()\n",
     "    n = await counter.n\n",
     "    print(n)\n",
-    "    return n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loop.run_until_complete(test2())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 流处理\n",
+    "    await client.close()\n",
+    "    return n\n",
     "\n",
-    "dask的实时任务提交接口非常适合做流处理,通过结合[streamz](https://github.com/python-streamz/streamz)我们可以构造复杂的流处理系统."
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    if \"Windows\" in platform.platform():\n",
+    "        multiprocessing.freeze_support()\n",
+    "    asyncio.get_event_loop().run_until_complete(f())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上面的方式我们使用的是基于进程池的`Client`对象,可以使用参数`processes=False`设定改为使用线程池的`Client`对象,这样就不需要在windows上使用`multiprocessing.freeze_support()`了"
    ]
   },
   {
@@ -243,27 +286,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 实时处理"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 批处理"
-   ]
   }
  ],
  "metadata": {
